# nano-claw

./: .gitignore  LICENSE  README.md  README_CN.md  __init__.py  cli.py  config.example.yaml  config_loader.py  main.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  agent_loop.py  llm_client.py  policy.py  smart_policy.py  types.py
examples/: basic_demo.py  mcp_demo.py  simple_usage.py
mcp_client/: __init__.py  client.py
memory/: __init__.py  manager.py
skills/: __init__.py  manager.py
skills/builtin/coding-router/: SKILL.md
skills/builtin/docs-writer/: SKILL.md
skills/universal/meeting-scheduler/: SKILL.md
skills/universal/study-helper/: SKILL.md
skills/universal/travel-planner/: SKILL.md
tests/: test_core.py  test_mcp.py  test_universal.py
tools/: __init__.py  advanced.py  base.py  builtin.py  external_coder.py  universal.py
